blue-green-nginx-ingress.yaml
#
# https://github.com/kubernetes/ingress-nginx/blob/main/docs/examples/rewrite/README.md
# https://github.com/kubernetes/ingress-nginx/blob/main/docs/user-guide/nginx-configuration/annotations.md
# https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/#canary
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-access-log: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: blue-green-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: bluegreen.localdev.me
    http:
      paths:
      - path: /blue(\/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: my-nginx-blue
            port:
              number: 80
      - path: /green(\/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: my-nginx-green
            port:
              number: 80
